--- a/style.css
+++ b/style.css
@@ -25,6 +25,13 @@ body {
 
 }
 
+/* Header
+
+
+
+
+*/
+
 header {
     color: white;
     padding: 40px;
@@ -52,7 +59,12 @@ header {
     margin-left:30px ;
 }
 
+/* 
 
+
+Navigation
+
+*/
 
 nav {
     color: white;
@@ -60,6 +72,36 @@ nav {
     background-color: blue;
     grid-area: nav;
 }
+
+.nav-list {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    
+}
+.nav-link {
+    color: black;
+    text-decoration: none;
+    padding: 0 1.5rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    transition: color .2s ease-in;
+    text-transform: uppercase;
+}
+
+.nav-link:hover {
+    color: white;
+}
+
+/* 
+
+
+Main content
+
+
+*/
 
 main {
     color: white;
