made the site moible responsive

--- a/style.css
+++ b/style.css
@@ -232,3 +232,31 @@ footer {
 .copyright-text {
     text-align: center;
 }
+
+/*
+
+
+
+Media Queries
+
+
+
+*/
+
+
+@media (max-width:900px) {
+    .grid-container {
+    grid-template-areas: 
+    'header'
+    'nav'
+    'main'
+    'aside'
+    'footer';
+
+}
+
+.container  {
+    max-width: 100%;
+    width: 100%;
+}
+}
